[package]
name = "hellosixty"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.0.6"

[[bin]]
name = "hellosixty"
path = "hellosixty.rs"
